infra/network/out/cluster-scoped-resources/config.openshift.io/ingresses.yaml
---
apiVersion: config.openshift.io/v1
items:
- apiVersion: config.openshift.io/v1
  kind: Ingress
  metadata:
    creationTimestamp: "2024-08-04T23:54:16Z"
    generation: 1
    managedFields:
    - apiVersion: config.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:componentRoutes:
            k:{"name":"oauth-openshift","namespace":"openshift-authentication"}:
              .: {}
              f:conditions:
                k:{"type":"Degraded"}:
                  .: {}
                  f:lastTransitionTime: {}
                  f:message: {}
                  f:reason: {}
                  f:status: {}
                  f:type: {}
                k:{"type":"Progressing"}:
                  .: {}
                  f:lastTransitionTime: {}
                  f:message: {}
                  f:reason: {}
                  f:status: {}
                  f:type: {}
              f:consumingUsers: {}
              f:currentHostnames: {}
              f:defaultHostname: {}
              f:name: {}
              f:namespace: {}
              f:relatedObjects: {}
      manager: AuthenticationCustomRouteController
      operation: Apply
      subresource: status
      time: "2024-08-23T14:24:17Z"
    - apiVersion: config.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          .: {}
          f:domain: {}
          f:loadBalancer:
            .: {}
            f:platform:
              .: {}
              f:type: {}
      manager: cluster-bootstrap
      operation: Update
      time: "2024-08-04T23:54:16Z"
    - apiVersion: config.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          .: {}
          f:defaultPlacement: {}
      manager: cluster-bootstrap
      operation: Update
      subresource: status
      time: "2024-08-04T23:54:17Z"
    name: cluster
    resourceVersion: "41752408"
    uid: df98d61c-2f61-4270-ac28-eb1d87f85400
  spec:
    domain: apps.homelab.wrightcode.io
    loadBalancer:
      platform:
        type: ""
  status:
    componentRoutes:
    - conditions:
      - lastTransitionTime: "2024-08-23T14:24:17Z"
        message: All is well
        reason: AsExpected
        status: "False"
        type: Progressing
      - lastTransitionTime: "2024-08-05T00:47:14Z"
        message: All is well
        reason: AsExpected
        status: "False"
        type: Degraded
      consumingUsers:
      - system:serviceaccount:oauth-openshift:authentication-operator
      currentHostnames:
      - oauth-openshift.apps.homelab.wrightcode.io
      defaultHostname: oauth-openshift.apps.homelab.wrightcode.io
      name: oauth-openshift
      namespace: openshift-authentication
      relatedObjects:
      - group: route.openshift.io
        name: oauth-openshift
        namespace: openshift-authentication
        resource: routes
    defaultPlacement: Workers
kind: IngressList
metadata:
  continue: ""
  resourceVersion: "42198067"
